--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,8 +38,9 @@ benchmark_physical:
    artifacts:
      name: "release test result"
      reports:
-       paths:
-         - /builds/kayanme/System.IO.Paging/Benchmark.Paging.PhysicalLevel/bin/Release/netcoreapp2.0/BenchmarkDotNet.Artifacts 
+       - /builds/kayanme/System.IO.Paging/Benchmark.Paging.PhysicalLevel/bin/Release/netcoreapp2.0/BenchmarkDotNet.Artifacts/*
+     paths:
+       - /builds/kayanme/System.IO.Paging/Benchmark.Paging.PhysicalLevel/bin/Release/netcoreapp2.0/BenchmarkDotNet.Artifacts 
    script:
     - dotnet run Benchmark.Paging.PhysicalLevel\Benchmark.Paging.PhysicalLevel.Core.csproj -c Release
    # - /builds/kayanme/System.IO.Paging/merge.sh /builds/kayanme/System.IO.Paging/Benchmark.Paging.PhysicalLevel/bin/Release/netcoreapp2.0/BenchmarkDotNet.Artifacts /builds/kayanme/System.IO.Paging/Benchmarks
