--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,34 +2,49 @@ image: microsoft/aspnetcore-build:latest
 stages:
  #- build
  - test 
- - benchmark
+ - durability
+ - benchmark 
  - deploy
 
 #build_all:  
 #  stage: build
 #  script: dotnet build Test.Pager.Core.sln
 
-#test_run_debug: 
-#  stage: test  
-#  script: 
-#     - dotnet test Test.Paging.Physical/Test.Paging.PhysicalLevel.Core.csproj -c Debug -r testResult/
-#     - dotnet test Test.Paging.LogicalLevel/Test.Paging.LogicalLevel.Core.csproj -c Debug -r testResult/
+test_run_debug: 
+  stage: test  
+  script: 
+     - dotnet test Test.Paging.Physical/Test.Paging.PhysicalLevel.Core.csproj -c Debug -r testResult/
+     - dotnet test Test.Paging.LogicalLevel/Test.Paging.LogicalLevel.Core.csproj -c Debug -r testResult/
 
-#test_run: 
-#  stage: test  
-#  script: 
-#    - dotnet test Test.Paging.Physical/Test.Paging.PhysicalLevel.Core.csproj -c Release -r testResult/
-#    - dotnet test Test.Paging.LogicalLevel/Test.Paging.LogicalLevel.Core.csproj -c Release -r testResult/
+test_run: 
+  stage: test  
+  script: 
+    - dotnet test Test.Paging.Physical/Test.Paging.PhysicalLevel.Core.csproj -c Release -r testResult/
+    - dotnet test Test.Paging.LogicalLevel/Test.Paging.LogicalLevel.Core.csproj -c Release -r testResult/
+
+durability_physical:
+   stage: durabilty
+   script:
+     - dotnet run --project Durabilty.Paging.PhysicalLevel/Durabilty.Paging.PhysicalLevel.Core.csproj -c Release
 
 benchmark_physical:
    stage: benchmark
    artifacts:
-     name: "release test result"   
+     name: "benchmark result"   
      paths:
-       - /builds/kayanme/System.IO.Paging/Benchmark.Paging.PhysicalLevel/bin/Release/netcoreapp2.0/BenchmarkDotNet.Artifacts 
+       - Benchmark.Paging.PhysicalLevel/bin/Release/netcoreapp2.0/BenchmarkDotNet.Artifacts/
    script:
     - dotnet run --project Benchmark.Paging.PhysicalLevel/Benchmark.Paging.PhysicalLevel.Core.csproj -c Release
    # - /builds/kayanme/System.IO.Paging/merge.sh /builds/kayanme/System.IO.Paging/Benchmark.Paging.PhysicalLevel/bin/Release/netcoreapp2.0/BenchmarkDotNet.Artifacts /builds/kayanme/System.IO.Paging/Benchmarks
+
+benchmark_logical:
+   stage: benchmark
+   artifacts:
+     name: "benchmark result"   
+     paths:
+       - Benchmark.Paging.LogicalLevel/bin/Release/netcoreapp2.0/BenchmarkDotNet.Artifacts/
+   script:
+    - dotnet run --project Benchmark.Paging.LogicalLevel/Benchmark.Paging.LogicalLevel.Core.csproj -c Release
 
 
 packages:
