--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,39 +3,58 @@ stages:
  #- build
  - test 
  - durability
- - benchmark 
+ - benchmark
+ - publish
  - deploy
 
 #build_all:  
 #  stage: build
 #  script: dotnet build Test.Pager.Core.sln
 
-test_run_debug: 
-  stage: test  
-  script: 
-     - dotnet test Test.Paging.Physical/Test.Paging.PhysicalLevel.Core.csproj -c Debug -r testResult/
-     - dotnet test Test.Paging.LogicalLevel/Test.Paging.LogicalLevel.Core.csproj -c Debug -r testResult/
+#test_run_debug: 
+#  stage: test  
+#  script: 
+#     - dotnet test Test.Paging.Physical/Test.Paging.PhysicalLevel.Core.csproj -c Debug -r testResult/
+ #    - dotnet test Test.Paging.LogicalLevel/Test.Paging.LogicalLevel.Core.csproj -c Debug -r testResult/
 
-test_run: 
-  stage: test  
-  script: 
-    - dotnet test Test.Paging.Physical/Test.Paging.PhysicalLevel.Core.csproj -c Release -r testResult/
-    - dotnet test Test.Paging.LogicalLevel/Test.Paging.LogicalLevel.Core.csproj -c Release -r testResult/
+#test_run: 
+#  stage: test  
+#  script: 
+#    - dotnet test Test.Paging.Physical/Test.Paging.PhysicalLevel.Core.csproj -c Release -r testResult/
+#    - dotnet test Test.Paging.LogicalLevel/Test.Paging.LogicalLevel.Core.csproj -c Release -r testResult/
 
 #durability_physical:
 #   stage: durability
 #   script:
 #     - dotnet run --project Durability.Paging.PhysicalLevel/Durability.Paging.PhysicalLevel.Core.csproj -c Release
 
+benchmark_physical:
+  stage: benchmark
+  cache:
+     paths: Benchmark.Paging.PhysicalLevel/bin/Release/Benchmarks
+  script:
+    - dotnet run --project Benchmark.Paging.PhysicalLevel/Benchmark.Paging.PhysicalLevel.Core.csproj -c Release
+
+
+benchmark_logical:
+  stage: benchmark
+  cache:
+     paths: Benchmark.Paging.LogicalLevel/bin/Release/Benchmarks
+  script:
+    - dotnet run --project Benchmark.Paging.LogicalLevel/Benchmark.Paging.LogicalLevel.Core.csproj -c Release
+
+
 pages:
-   stage: benchmark
+   stage: publish
+   cache:
+       paths: 
+         - Benchmark.Paging.PhysicalLevel/bin/Release/Benchmarks
+         - Benchmark.Paging.LogicalLevel/bin/Release/Benchmarks
    artifacts:
      paths: 
        - public
-   script:
-    - dotnet run --project Benchmark.Paging.PhysicalLevel/Benchmark.Paging.PhysicalLevel.Core.csproj -c Release
-    - cp -r Benchmark.Paging.PhysicalLevel/bin/Release/Benchmarks/* public/benchmarks/physical
-    - dotnet run --project Benchmark.Paging.LogicalLevel/Benchmark.Paging.LogicalLevel.Core.csproj -c Release
+   script: 
+    - cp -r Benchmark.Paging.PhysicalLevel/bin/Release/Benchmarks/* public/benchmarks/physical    
     - cp -r Benchmark.Paging.LogicalLevel/bin/Release/Benchmarks/* public/benchmarks/logical
     
 
