--- a/System.IO.Paging.LogicalLevel/System.IO.Paging.LogicalLevel.Core.csproj
+++ b/System.IO.Paging.LogicalLevel/System.IO.Paging.LogicalLevel.Core.csproj
@@ -5,7 +5,7 @@
     <AssemblyName>System.IO.Paging.LogicalLevel</AssemblyName>
     <RootNamespace>System.IO.Paging.LogicalLevel</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.0.7-beta</Version>
+    <Version>0.0.8-beta</Version>
     <PackageId>Addiction.System.IO.Paging.LogicalLevel</PackageId>
     <Authors>Kayan</Authors>
     <Company>-</Company>
@@ -16,6 +16,8 @@
     <PackageReleaseNotes>First beta. Not for public usage.</PackageReleaseNotes>
     <PackageProjectUrl>https://gitlab.com/kayanme/System.IO.Paging</PackageProjectUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <AssemblyVersion>0.0.8.0</AssemblyVersion>
+    <FileVersion>0.0.8.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
