Fixed package id.

--- a/System.IO.Paging.PhysicalLevel/System.IO.Paging.PhysicalLevel.csproj
+++ b/System.IO.Paging.PhysicalLevel/System.IO.Paging.PhysicalLevel.csproj
@@ -21,7 +21,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">    
-    <Product>System.IO.Paging.PhysicalLevel</Product>
+    <Product>Addiction.System.IO.Paging.PhysicalLevel</Product>
     <Description>Memory-mapped file paging subsystem. Physical pages.</Description>    
   </PropertyGroup>
 
