--- a/System.IO.Paging.PhysicalLevel.MemoryStubs/System.IO.Paging.PhysicalLevel.MemoryStubs.csproj
+++ b/System.IO.Paging.PhysicalLevel.MemoryStubs/System.IO.Paging.PhysicalLevel.MemoryStubs.csproj
@@ -8,7 +8,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>Addiction.System.IO.Paging.PhysicalLevel.MemoryStubs</PackageId>
     <Description>Memory-mapped file paging subsystem. Testing stubs.</Description>
-    <Version>0.0.8-beta</Version>
+    <Version>0.0.11-beta</Version>
     <Authors>kayan</Authors>
     <Company>-</Company>
     <Product>-</Product>
@@ -16,6 +16,7 @@
     <RepositoryType>git</RepositoryType>
     <PackageReleaseNotes>First beta. Not for public usage.</PackageReleaseNotes>
     <PackageProjectUrl>https://gitlab.com/kayanme/System.IO.Paging</PackageProjectUrl>
+    <AssemblyVersion>0.0.11.0</AssemblyVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
