--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,10 +11,9 @@ stages:
 test_physical_debug: 
   stage: unit_test  
   script: 
-     - dotnet restore Test.Paging.Physical 
+     - dotnet tool install --global coverlet.console
      - dotnet tool install coveralls.net --version 1.0.0-beta0002 --tool-path tools
-     - dotnet test Test.Paging.Physical -c Debug -r testResult/ 
-     - $NUGET_PACKAGES/OpenCover.4.6.166/tools/OpenCover.Console.exe -register:user -target:dotnet.exe -targetargs:"test Test.Paging.Physical -c Debug" -oldstyle -output:coverage.xml     
+     - dotnet test Test.Paging.Physical -c Debug -r testResult/ /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=coverage.xml          
      - ./tools/csmacnz.coveralls.exe --opencover -i coverage.xml --repoToken 6ZRcivFLTNUU4bmNIqsZgaXOc4IMWktjd --commitId $CI_COMMIT_SHA --commitBranch $CI_COMMIT_REF_NAME --commitMessage $CI_COMMIT_TITLE --jobId $CI_JOB_ID
 
 
